syntax = "proto3";

package pb;

import "google/api/annotations.proto";

// Client represents an OAuth2 client.
message ClientMsg {
  string id = 1;
  string secret = 2;
  repeated string redirect_uris = 3;
  repeated string trusted_peers = 4;
  bool public = 5;
  string name = 6;
  string logo_url = 7;
}

// CreateClientReq is a request to make a client.
message CreateReq {
  ClientMsg client = 1;
}

// CreateClientResp returns the response from creating a client.
message CreateRes {
  bool exists = 1;
  ClientMsg client = 2; 
}

// DeleteClientReq is a request to delete a client.
message DeleteReq {
  // The ID of the client.
  string client_id = 1;
}

// DeleteClientResp determines if the. 
message DeleteRes {
  bool not_exist = 1;
}

service Client {
    rpc Create(CreateReq) returns (CreateRes) {
        option (google.api.http) = { post : "/v1/client" body : "*" };
    };

    rpc Delete(DeleteReq) returns (DeleteRes) {
        option (google.api.http) = { get : "/v1/client/{client_id}"};
    };
}